We now store 2 ticks of "follow-ups" after pruning a speculative change
-this avoids the problem where a change which requires multiple sub-changes to complete appears to "revert" for the time between when the first and last steps commit
-this is limited to 2 ticks since that seems to be the limit on relevant multi-step cases before potentially unbounded cases, but this could change in the future
-this also exposed some cases where mutations could be applied to inconsistent state (mutation based on speculative projection failing to apply to real state) so those cases have also been addressed, here